# Group_E_Simulation_Lifecycle

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  action.yml  build.sh  run_tests.sh  setup.sh  setup_docker.sh
.github/workflows/: devel.yml  main.yml
data/: DA_Ottawa_Simple.geojson  DB_Ottawa_Simple.geojson  DB_Ottawa_Simple_Example.geojson  DB_Ottawa_Vicinities_Simple.geojson  DB_Ottawa_Vicinities_Simple_Example.geojson  Hospitals.geojson  simulation_config.json  toy_workflow.json  workflow.json
data/demo_1/: demo.json  toy_workflow.json
data/demo_2/: provinces_workflow.json
data/results/: pandemic_messages.txt  (+1 more)
src/: CMakeLists.txt  main.c
src/simulation_lifecycle/: convert.c  models.c  simulation.c  spatial_analysis.c  structures.c  utils.c  visualization.c
src/simulation_lifecycle/spatial_analysis_operations/: centroids.c  closest_distance.c  select_by_attributes.c
src/simulation_lifecycle/utils/: feature.c  file.c  geometry.c  json.c  linked_list.c  strings.c  workflow.c
test/: CMakeLists.txt  test_convert.c  test_feature.c  test_file.c  test_geometry.c  test_json.c  test_linked_list.c  test_run_sim.c  test_simulation.c  test_spatial_analysis.c  test_spatial_operations.c  test_template.c  test_visualization.c  test_workflow.c
test/data/: DB_Ottawa_Vicinities_IncorrectID.geojson  DB_Ottawa_Vicinities_IsolatedCell.geojson  DB_Ottawa_Vicinities_Simple.geojson  Hospitals.geojson  geojson-error.geojson
test/data/convert_tests/: empty_viz_fields_workflow.json  missing_viz_fields_workflow.json
test/data/convert_tests/case_1/simulation/: config.json
test/data/convert_tests/case_3/conversion/: structure.json
test/data/convert_tests/case_3/simulation/: simulation_output_messages.txt
test/data/convert_tests/case_3_and_5/: data.json
test/data/convert_tests/case_6/: ABP_output_messages.txt
test/data/convert_tests/case_7/: co2.json  structure.json
test/data/run_simulation/: 1_1_nonexisting_model.json  1_2_nonstring_model.json  1_3_missing_model.json  1_nonexisting_model.json  2_1_nonexisting_config_output_path.json  2_2_invalid_config_output_path.json  2_3_missing_config_output_path.json  2_existing_model.json  3_1_exist_result_output_path.json  3_2_invalid_result_output_path.json  3_3_missing_result_output_path.json  4_1_valid_model_valid_result_output_path.json  simulation_output_messages.txt
test/data/run_simulation/output/simulation/: simulation_output_result.txt
test/data/run_simulation/output_already_exists/simulation/: build_simulation_output.json
test/data/simulation/: 2_2_nonstring_model.json  2_3_nonexisting_model.json  3_1_no_default_config_model.json  3_2_nonobject_default_config_model.json  3_4_incomplete_default_config_model.json  3_5_invalid_delay_default_config_model.json  4_10_cells_config_valid_pop_mapping.json  4_1_empty_specific_config_model.json  4_1_missing_cells_config.json  4_2_invalid_output_config_path.json  4_2_invalid_specific_config_params_model.json  4_2_nonarray_cells_config.json  4_3_empty_cells_config.json  4_3_existing_output_config_path.json  4_3_missing_specific_config_params_model.json  4_4_cells_config_no_source.json  4_4_valid_output_config_path.json  4_5_cells_config_invalid_source.json  4_6_cells_config_no_id_map.json  4_7_cells_config_invalid_id_map.json  4_8_cells_config_invalid_pop_mapping.json  4_8_cells_config_valid_simple.json  5_1_missing_output_config_path.json  5_1_missing_vicinities_config.json  5_2_empty_vicinities_config.json  5_2_invalid_output_config_path.json  5_3_existing_output_config_path.json  5_3_vicinities_config_invalid_source.json  5_4_valid_output_config_path.json  5_4_vicinities_config_invalid_id_map.json  5_5_vicinities_config_incorrect_source.json  5_6_vicinities_config_incomplete_source.json  6_1_missing_output_config_path.json  6_2_invalid_output_config_path.json  6_3_existing_output_config_path.json  6_4_valid_config.json  output_config.json
test/data/spatial_operations/: 10_missing_from_id_parameter_CD.json  11_missing_to_id_parameter_CD.json  12_invalid_geometry_origin_type_CD.json  13_invalid_geometry_destination_type_CD.json  1_missing_data_source_workflow.json  2_existing_data_source_workflow.json  3_missing_data_SBA.json  4_missing_data_source_SBA.json  5_missing_field_SBA.json  6_missing_value_SBA.json  7_missing_origin_data_source_CD.json  8_missing_destination_data_source_CD.json  9_missing_n_param_parameter_CD.json
test/data/visualization/: provinces.geojson  visualization.json
test/data/visualization/input/: provinces_vicinity.geojson
test/data/visualization/output/conversion/: structure.json
test/data/visualization/output_missing_conversion/visualization/: provinces.geojson
test/data/workflow/: 10_duplicate_data_id.json  11_duplicate_data_path.json  12_bad_path.json  13_missing_data_id.json  14_missing_data_path.json  1_valid_workflow.json  3_missing_path.json  4_missing_id.json  5_additional_data_source_vars.json  6_null_spatial_analysis.json  7_null_visualization.json  8_null_simulation.json  9_null_data_sources.json
(+34 files in other folders)
